--- a/analiseficha.html
+++ b/analiseficha.html
@@ -57,8 +57,6 @@ body{
 /* trava scroll quando modal aberto */
 body.modal-open{
   overflow:hidden;
-  position:fixed;
-  width:100%;
 }
 
 /* =========================================================
@@ -273,7 +271,7 @@ body.modal-open{
 .modal-body{
   padding:10px 4px 26px;
   overflow-y:auto;
-  max-height:calc(92vh - 220px);
+  max-height:calc(96vh - 180px);
   scrollbar-gutter:stable;
 }
 
@@ -447,7 +445,7 @@ button{
   }
 
   .modal-box{
-    max-width:100%;
+  max-height:96vh;
     height:92vh;
     border-radius:22px 22px 0 0;
   }
